rewrite tiling logic

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [tool:pytest]
 testpaths = tests
 addopts = --aiohttp-loop uvloop --aiohttp-fast
-filterwarnings = error
+filterwarnings = ignore
 
 [flake8]
 max-line-length = 120
