--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [tool:pytest]
 testpaths = tests
 addopts = --aiohttp-loop uvloop --aiohttp-fast
-filterwarnings = ignore
+filterwarnings = error
 
 [flake8]
 max-line-length = 120
